<resources>
    <string name="app_name">FitLife</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="start_your_journey_with_fit_life">Start Your Journey With Fit Life</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="welcome_to_fit_life">Welcome To Fit Life</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now !</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="name_is_required">* Name is required!</string>
    <string name="email_is_required">* Email is required!</string>
    <string name="password_is_required">* Password is required!</string>
    <string name="show_password">Show Password</string>
    <string name="workouts">Workouts</string>
    <string name="add_your_favourite_workouts_to_weekly_plan">Add your favourite workouts to weekly plan</string>
    <string name="my_weekly_workout_plans">My Weekly Workout Plans</string>
    <string name="your_planned_workouts_for_this_week">Your planned workouts for this week</string>
    <string name="dash">-</string>
    <string name="logout">Logout</string>
    <string name="no_workout_fot_this_week_yet">No Workout Fot This Week Yet!</string>
    <string name="create_custom">Create Custom</string>
    <string name="add_equipment">+ Add Equipment</string>
    <string name="add_exercise">+ Add Exercise</string>
    <string name="create_custom_workout">Create Custom Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_description">Workout Description</string>
    <string name="exercises">Exercises</string>
    <string name="equipment">Equipment</string>
    <string name="save_workout">Save Workout</string>
    <string name="my_workouts">My Workouts</string>
    <string name="back">Back</string>
    <string name="update_workout">Update Workout</string>
    <string name="add_to_weekly_plan">Add To Weekly Plan</string>
    <string name="my_records">My Records</string>

    <string-array name="days_items">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
